--- a/main.tex
+++ b/main.tex
@@ -35,6 +35,12 @@
 \def\changemargin#1#2{\list{}{\rightmargin#2\leftmargin#1}\item[]}
 \let\endchangemargin=\endlist
 
+\makeatletter
+\renewcommand*\l@subsection{\@dottedtocline{2}{1.5em}{2.0em}}
+\renewcommand*\l@subsubsection{\@dottedtocline{3}{3.5em}{2.0em}}
+\renewcommand*\l@paragraph{\@dottedtocline{4}{5.5em}{2.0em}}
+\makeatother
+
 \title{Zulässigkeit und Ausgestaltung von Provisionen bei Versicherungsanlageprodukten}
 \author{Lukas Puhony}
 \date{\today}
