--- a/main.tex
+++ b/main.tex
@@ -8,9 +8,17 @@
 \usepackage{titlesec}
 \usepackage{soulutf8} 
 \usepackage{graphicx}
+\usepackage[hidelinks]{hyperref}
+\usepackage{csquotes}
 \usepackage{titling}
 \usepackage{fontspec}
 \setmainfont{TeX Gyre Termes}
+
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\renewcommand{\headrulewidth}{0pt}
+\fancyhf{}
+\fancyfoot[R]{\thepage}
 
 \setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{4}
