--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,9 @@
 \usepackage{fontspec}
 \setmainfont{TeX Gyre Termes}
 
+\usepackage[style=verbose]{biblatex}
+\addbibresource{bibliography.bib}
+
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0pt}
@@ -85,7 +88,11 @@ Here comes the abstract.
 
 Beispieltext; Im Fall einer mangelhaften Sache, die der Übernehmer ihrem Verwendungszweck gemäß vor Bekanntwerden des Mangels gutgläubig eingebaut hat , muss der Übergeber im Rahmen seiner gewährleistungsrechtlichen Verbesserungspflicht  auch den Ausbau und den Einbau des Ersatzguts übernehmen oder dem Übernehmer die anfallenden Kosten ersetzen. Dies gilt unabhängig davon, ob der Vertrag auch den Einbau umfasste. Ob der Einbau durch den Übernehmer nicht gutgläubig erfolgte, weil der Mangel bereits zuvor erkennbar war, ist nur auf Einwendung des Übergebers zu prüfen.
 
-Wenn der Übergeber lediglich den Austausch der mangelhaften Sache ohne Demontage oder Kostentragung anbietet, kann der Übernehmer auf die sekundären Gewährleistungsbehelfe Preisminderung oder Wandlung umsteigen.
+Wenn der Übergeber lediglich den Austausch der mangelhaften Sache ohne Demontage oder Kostentragung anbietet, kann der Übernehmer auf die sekundären Gewährleistungsbehelfe Preisminderung oder Wandlung umsteigen. \footcite[20]{sonnberger2023} Noch ein Zitat. \footcite[22]{sonnberger2023}
 
 test
+
+\newpage
+\nocite{*}
+\printbibliography
 \end{document}
