--- a/bibliography.bib
+++ b/bibliography.bib
@@ -13,9 +13,18 @@
 
 @book{sonnberger2023,
   author    = {Martin Sonnberger and Lukas Puhony},
-  editor    = {Lukas Puhony},
   publisher = {Ein Verlag},
   title     = {Ein Buch},
   shorttitle= {Ein Buch},
+  edition   = {3},
   year      = {2023}
 }
+
+% @book{sonnberger2021,
+%   author    = {Peter Sonnberger and Lukas Wappler},
+%   editor    = {Lukas Puhony},
+%   publisher = {Ein Verlag},
+%   title     = {Ein Buch},
+%   shorttitle= {Ein Buch},
+%   year      = {2021}
+% }
