fix toc & split bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -20,11 +20,11 @@
   year      = {2023}
 }
 
-% @book{sonnberger2021,
-%   author    = {Peter Sonnberger and Lukas Wappler},
-%   editor    = {Lukas Puhony},
-%   publisher = {Ein Verlag},
-%   title     = {Ein Buch},
-%   shorttitle= {Ein Buch},
-%   year      = {2021}
-% }
+@jurisdiction{vfgh2023,
+  title      = {VfGH 2023/01/01},
+  date       = {2023-01-01},
+  institution = {VfGH},
+  shorthand  = {VfGH 2023/01/01},
+  number     = {1},
+  volume     = {2023},
+}
