--- a/bibliography.bib
+++ b/bibliography.bib
@@ -14,8 +14,7 @@
 @book{sonnberger2023,
   author    = {Martin Sonnberger and Lukas Puhony},
   publisher = {Ein Verlag},
-  title     = {Ein Buch},
-  shorttitle= {Ein Buch},
+  title     = {Ein cooles Buch},
   edition   = {3},
   year      = {2023}
 }
@@ -24,7 +23,6 @@
   title      = {VfGH 2023/01/01},
   date       = {2023-01-01},
   institution = {VfGH},
-  shorthand  = {VfGH 2023/01/01},
   number     = {1},
   volume     = {2023},
 }
